      - Change to encode HOVI reports in BUFR format from the ADPSFC dump file.
        Convert the attribute, AOFV, of HOVI to the established TAC format, .REHOVI,
        in the VISBSEQN sequence.
      - Change to encode past weather in BUFR format from the ADPSFC dump file.
        Change to read the time period or displacement, TPHR, from the past
        weather measurements.
   prepobs_prepdata.fd/prepdata.f
    - In function ISSEL(), expanded JTYPE array & logic to include values
      for new report types 563-4 for BUFR-feed fixed & drifting buoys.
    - Declared variable IDSDAT throughout various routines to eliminate
      Boundary Run-Time Check Failures.
    - In subprogram GETGPSIPW: Changed subset to subset_t.  Defined subset_t
      to eliminate Boundary Run-Time Check Failures.
    - In subprogram PREP and BLOCK DATA:
      - Changes made to handle new VAD wind data reported from other countries
        (e.g. Europe, New Zealand) (NC002018) and Hong Kong wind profiler data
        (NC002014).
      - Logic added to differentiate between these and existing Radar Coded
        Message (RCM) VAD wind reports via use of report subtype 
        (TSB=1 for RCM, =2 for Level 2 and =3 for other vadwnd).
        BENEFIT: Code is in place to handle future data streams.
   prepobs_prepdata.fd/w3unpkb7.f
    - Declared variable IDSDAT as 8-byte integer.
    - Added processing to encode newly available VAD winds from Europe
      and New Zealand (NC002018) and profiler winds from Hong Kong
      (NC002014) into prepbufr files.
   prepobs_profcqc.fd/profcqc.f
    - Increased number of levels parameter, NL, from 150 to 300 throughout
      various routines to support future profiler data streams.
      BENEFIT: allows for future processing for BUFR format proflr and
               vadwnd data.
   build.sh:
    - added importable environment variable, debug, to enable
      additional compiler options.